chore: update docs

--- a/docs/api/v1.md
+++ b/docs/api/v1.md
@@ -53,26 +53,26 @@ curl \
 
 <!-- tabs:end -->
 
--   `options?` <Object\>
+-   `options?` {Object}
 
-    -   `where` <Object\> Set of the filters by field values:
-        -   `acl_id` <Array\> **Required**. Filter by the `acl_id` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <integer\> Field value.
-        -   `email` <Array\> Filter by the `email` field value:
-            -   <string\> Filter operator, one of the: `"includes case insensitive"`.
-            -   <string\> Field value.
-        -   `roles` <Array\> Filter by the `roles` field value:
-            -   <string\> Filter operator, one of the: `"in"`.
-            -   <string\> Field value.
-        -   `enabled` <Array\> Filter by the `enabled` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <boolean\> Field value.
-    -   `order_by` <Array\> Array of the sort conditions. **Default:** `[["email","desc"]]`. Each sort condition must be represented with the two-elements <Array\> with the following structure:
-        -   <string\> Field name to sort by, possible fields: `"email"`, `"created"`, `"enabled"`.
-        -   <string\> Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
-    -   `offset` <integer\> Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
-    -   `limit` <integer\> Max rows to return. Maximum allowed value: `50`. **Default:** `50`.
+    -   `where` {Object} Set of the filters by field values:
+        -   `acl_id` {Array} **Required**. Filter by the `acl_id` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {integer} Field value.
+        -   `email` {Array} Filter by the `email` field value:
+            -   {string} Filter operator, one of the: `"includes case insensitive"`.
+            -   {string} Field value.
+        -   `roles` {Array} Filter by the `roles` field value:
+            -   {string} Filter operator, one of the: `"in"`.
+            -   {string} Field value.
+        -   `enabled` {Array} Filter by the `enabled` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {boolean} Field value.
+    -   `order_by` {Array} Array of the sort conditions. **Default:** `[["email","desc"]]`. Each sort condition must be represented with the two-elements {Array} with the following structure:
+        -   {string} Field name to sort by, possible fields: `"email"`, `"created"`, `"enabled"`.
+        -   {string} Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
+    -   `offset` {integer} Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
+    -   `limit` {integer} Max rows to return. Maximum allowed value: `50`. **Default:** `50`.
     -   Example (this is the abstract data structure example, not related to the current method):
         ```json
         {
@@ -155,16 +155,16 @@ curl \
 
 <!-- tabs:end -->
 
--   `options?` <Object\>
+-   `options?` {Object}
 
-    -   `where` <Object\> Set of the filters by field values:
-        -   `acl_id` <Array\> **Required**. Filter by the `acl_id` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <integer\> Field value.
-        -   `email` <Array\> Filter by the `email` field value:
-            -   <string\> Filter operator, one of the: `"includes case insensitive"`.
-            -   <string\> Field value.
-    -   `limit` <integer\> Max rows to return. Maximum allowed value: `20`. **Default:** `20`.
+    -   `where` {Object} Set of the filters by field values:
+        -   `acl_id` {Array} **Required**. Filter by the `acl_id` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {integer} Field value.
+        -   `email` {Array} Filter by the `email` field value:
+            -   {string} Filter operator, one of the: `"includes case insensitive"`.
+            -   {string} Field value.
+    -   `limit` {integer} Max rows to return. Maximum allowed value: `20`. **Default:** `20`.
     -   Example (this is the abstract data structure example, not related to the current method):
         ```json
         {
@@ -235,7 +235,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `acl_id` <integer\>
+-   `acl_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -249,7 +249,7 @@ curl \
 
     </details>
 
--   `user_id` <integer\>
+-   `user_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -262,7 +262,7 @@ curl \
 
     </details>
 
--   `options?` <Object\>
+-   `options?` {Object}
 
     <details>
         <summary>JSON schema</summary>
@@ -312,7 +312,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `acl_id` <integer\>
+-   `acl_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -326,7 +326,7 @@ curl \
 
     </details>
 
--   `user_id` <integer\>
+-   `user_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -363,7 +363,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `acl_id` <integer\>
+-   `acl_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -377,7 +377,7 @@ curl \
 
     </details>
 
--   `user_id` <integer\>
+-   `user_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -390,7 +390,7 @@ curl \
 
     </details>
 
--   `enabled` <boolean\>
+-   `enabled` {boolean}
 
     <details>
         <summary>JSON schema</summary>
@@ -427,7 +427,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `acl_id` <integer\>
+-   `acl_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -441,7 +441,7 @@ curl \
 
     </details>
 
--   `user_id` <integer\>
+-   `user_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -454,7 +454,7 @@ curl \
 
     </details>
 
--   `roles` <Array\>
+-   `roles` {Array}
 
     <details>
         <summary>JSON schema</summary>
@@ -495,7 +495,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `acl_id` <integer\>
+-   `acl_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -509,7 +509,7 @@ curl \
 
     </details>
 
--   `user_id` <integer\>
+-   `user_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -522,7 +522,7 @@ curl \
 
     </details>
 
--   `roles` <Array\>
+-   `roles` {Array}
 
     <details>
         <summary>JSON schema</summary>
@@ -564,7 +564,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `acl_id` <integer\>
+-   `acl_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -578,7 +578,7 @@ curl \
 
     </details>
 
--   `user_id` <integer\>
+-   `user_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -591,7 +591,7 @@ curl \
 
     </details>
 
--   `roles` <Array\>
+-   `roles` {Array}
 
     <details>
         <summary>JSON schema</summary>
@@ -633,7 +633,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `acl_id` <integer\>
+-   `acl_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -647,7 +647,7 @@ curl \
 
     </details>
 
--   `user_id?` <integer\>
+-   `user_id?` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -684,7 +684,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `acl_id` <integer\>
+-   `acl_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -698,7 +698,7 @@ curl \
 
     </details>
 
--   `user_id?` <integer\>
+-   `user_id?` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -735,7 +735,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `acl_id` <integer\>
+-   `acl_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -799,7 +799,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `instance_id` <integer\>
+-   `instance_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -851,7 +851,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `options` <Object\>
+-   `options` {Object}
 
     <details>
         <summary>JSON schema</summary>
@@ -896,7 +896,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `monitoring_method_id` <integer\>
+-   `monitoring_method_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -946,17 +946,17 @@ curl \
 
 <!-- tabs:end -->
 
--   `options?` <Object\>
+-   `options?` {Object}
 
-    -   `where` <Object\> Set of the filters by field values:
-        -   `monitoring_method_id` <Array\> **Required**. Filter by the `monitoring_method_id` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <integer\> Field value.
-    -   `order_by` <Array\> Array of the sort conditions. **Default:** `[["date","desc"]]`. Each sort condition must be represented with the two-elements <Array\> with the following structure:
-        -   <string\> Field name to sort by, possible fields: `"date"`.
-        -   <string\> Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
-    -   `offset` <integer\> Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
-    -   `limit` <integer\> Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
+    -   `where` {Object} Set of the filters by field values:
+        -   `monitoring_method_id` {Array} **Required**. Filter by the `monitoring_method_id` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {integer} Field value.
+    -   `order_by` {Array} Array of the sort conditions. **Default:** `[["date","desc"]]`. Each sort condition must be represented with the two-elements {Array} with the following structure:
+        -   {string} Field name to sort by, possible fields: `"date"`.
+        -   {string} Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
+    -   `offset` {integer} Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
+    -   `limit` {integer} Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
     -   Example (this is the abstract data structure example, not related to the current method):
         ```json
         {
@@ -1024,7 +1024,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `monitoring_method_id` <integer\>
+-   `monitoring_method_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -1087,7 +1087,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `password` <string\> New password.
+-   `password` {string} New password.
 
     <details>
         <summary>JSON schema</summary>
@@ -1124,7 +1124,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `email` <string\>
+-   `email` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -1160,7 +1160,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `token` <string\>
+-   `token` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -1238,7 +1238,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `locale` <string\>
+-   `locale` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -1324,7 +1324,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `session_id` <integer\>
+-   `session_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -1385,7 +1385,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `options?` <Object\>
+-   `options?` {Object}
 
     <details>
         <summary>JSON schema</summary>
@@ -1683,7 +1683,7 @@ curl \
 
     </details>
 
--   `fields?` <Object\>
+-   `fields?` {Object}
 
     <details>
         <summary>JSON schema</summary>
@@ -1751,7 +1751,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `token` <string\> Email confirmation token.
+-   `token` {string} Email confirmation token.
 
     <details>
         <summary>JSON schema</summary>
@@ -1786,7 +1786,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `email` <string\>
+-   `email` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -1822,7 +1822,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `token` <string\>
+-   `token` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -1835,7 +1835,7 @@ curl \
 
     </details>
 
--   `password` <string\>
+-   `password` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -1870,7 +1870,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `token` <string\>
+-   `token` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -1907,7 +1907,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `acl_id` <integer\>
+-   `acl_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -1946,7 +1946,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `options?` <Object\>
+-   `options?` {Object}
 
     <details>
         <summary>JSON schema</summary>
@@ -1996,7 +1996,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `options` <Object\>
+-   `options` {Object}
 
     <details>
         <summary>JSON schema</summary>
@@ -2056,14 +2056,14 @@ curl \
 
 <!-- tabs:end -->
 
--   `options` <Object\>
+-   `options` {Object}
 
-    -   `where` <Object\> Set of the filters by field values:
-        -   `done` <Array\> Filter by the `done` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <boolean\> Field value.
-    -   `offset` <integer\> Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
-    -   `limit` <integer\> Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
+    -   `where` {Object} Set of the filters by field values:
+        -   `done` {Array} Filter by the `done` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {boolean} Field value.
+    -   `offset` {integer} Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
+    -   `limit` {integer} Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
     -   Example (this is the abstract data structure example, not related to the current method):
         ```json
         {
@@ -2189,7 +2189,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `options?` <Object\>
+-   `options?` {Object}
 
     <details>
         <summary>JSON schema</summary>
@@ -2238,20 +2238,20 @@ curl \
 
 <!-- tabs:end -->
 
--   `options?` <Object\>
+-   `options?` {Object}
 
-    -   `where` <Object\> Set of the filters by field values:
-        -   `name` <Array\> Filter by the `name` field value:
-            -   <string\> Filter operator, one of the: `"includes case insensitive"`.
-            -   <string\> Field value.
-        -   `enabled` <Array\> Filter by the `enabled` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <boolean\> Field value.
-    -   `order_by` <Array\> Array of the sort conditions. **Default:** `[["name","asc"]]`. Each sort condition must be represented with the two-elements <Array\> with the following structure:
-        -   <string\> Field name to sort by, possible fields: `"name"`, `"created"`, `"last_activity"`, `"enabled"`.
-        -   <string\> Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
-    -   `offset` <integer\> Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
-    -   `limit` <integer\> Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
+    -   `where` {Object} Set of the filters by field values:
+        -   `name` {Array} Filter by the `name` field value:
+            -   {string} Filter operator, one of the: `"includes case insensitive"`.
+            -   {string} Field value.
+        -   `enabled` {Array} Filter by the `enabled` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {boolean} Field value.
+    -   `order_by` {Array} Array of the sort conditions. **Default:** `[["name","asc"]]`. Each sort condition must be represented with the two-elements {Array} with the following structure:
+        -   {string} Field name to sort by, possible fields: `"name"`, `"created"`, `"last_activity"`, `"enabled"`.
+        -   {string} Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
+    -   `offset` {integer} Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
+    -   `limit` {integer} Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
     -   Example (this is the abstract data structure example, not related to the current method):
         ```json
         {
@@ -2332,7 +2332,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `name` <string\>
+-   `name` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -2369,7 +2369,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `token_id` <integer\>
+-   `token_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -2406,7 +2406,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `token_id` <integer\>
+-   `token_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -2419,7 +2419,7 @@ curl \
 
     </details>
 
--   `enabled` <boolean\>
+-   `enabled` {boolean}
 
     <details>
         <summary>JSON schema</summary>
@@ -2458,23 +2458,23 @@ curl \
 
 <!-- tabs:end -->
 
--   `options?` <Object\>
+-   `options?` {Object}
 
-    -   `where` <Object\> Set of the filters by field values:
-        -   `id` <Array\> Filter by the `id` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <integer\> Field value.
-        -   `search` <Array\> Filter by the `search` field value:
-            -   <string\> Filter operator, one of the: `"includes case insensitive"`.
-            -   <string\> Field value.
-        -   `roles` <Array\> Filter by the `roles` field value:
-            -   <string\> Filter operator, one of the: `"in"`.
-            -   <string\> Field value.
-    -   `order_by` <Array\> Array of the sort conditions. **Default:** `[["email","asc"]]`. Each sort condition must be represented with the two-elements <Array\> with the following structure:
-        -   <string\> Field name to sort by, possible fields: `"id"`, `"email"`, `"created"`, `"last_activity"`, `"enabled"`.
-        -   <string\> Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
-    -   `offset` <integer\> Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
-    -   `limit` <integer\> Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
+    -   `where` {Object} Set of the filters by field values:
+        -   `id` {Array} Filter by the `id` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {integer} Field value.
+        -   `search` {Array} Filter by the `search` field value:
+            -   {string} Filter operator, one of the: `"includes case insensitive"`.
+            -   {string} Field value.
+        -   `roles` {Array} Filter by the `roles` field value:
+            -   {string} Filter operator, one of the: `"in"`.
+            -   {string} Field value.
+    -   `order_by` {Array} Array of the sort conditions. **Default:** `[["email","asc"]]`. Each sort condition must be represented with the two-elements {Array} with the following structure:
+        -   {string} Field name to sort by, possible fields: `"id"`, `"email"`, `"created"`, `"last_activity"`, `"enabled"`.
+        -   {string} Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
+    -   `offset` {integer} Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
+    -   `limit` {integer} Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
     -   Example (this is the abstract data structure example, not related to the current method):
         ```json
         {
@@ -2559,7 +2559,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `email` <string\>
+-   `email` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -2573,7 +2573,7 @@ curl \
 
     </details>
 
--   `options?` <Object\>
+-   `options?` {Object}
 
     <details>
         <summary>JSON schema</summary>
@@ -2632,7 +2632,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `user_id` <integer\>
+-   `user_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -2669,7 +2669,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `user_id` <integer\> User id or name.
+-   `user_id` {integer} User id or name.
 
     <details>
         <summary>JSON schema</summary>
@@ -2682,7 +2682,7 @@ curl \
 
     </details>
 
--   `enabled` <boolean\>
+-   `enabled` {boolean}
 
     <details>
         <summary>JSON schema</summary>
@@ -2719,7 +2719,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `user_id` <integer\> User id or name.
+-   `user_id` {integer} User id or name.
 
     <details>
         <summary>JSON schema</summary>
@@ -2732,7 +2732,7 @@ curl \
 
     </details>
 
--   `pasword?` <string\>
+-   `pasword?` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -2769,7 +2769,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `user_id` <integer\>
+-   `user_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -2806,7 +2806,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `user_id` <integer\>
+-   `user_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -2819,7 +2819,7 @@ curl \
 
     </details>
 
--   `session_id` <integer\>
+-   `session_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -2856,7 +2856,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `user_id` <integer\>
+-   `user_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -2921,23 +2921,23 @@ curl \
 
 <!-- tabs:end -->
 
--   `options?` <Object\>
+-   `options?` {Object}
 
-    -   `where` <Object\> Set of the filters by field values:
-        -   `static` <Array\> Filter by the `static` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <boolean\> Field value.
-        -   `deleted` <Array\> Filter by the `deleted` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <boolean\> Field value.
-        -   `name` <Array\> Filter by the `name` field value:
-            -   <string\> Filter operator, one of the: `"includes case insensitive"`.
-            -   <string\> Field value.
-    -   `order_by` <Array\> Array of the sort conditions. **Default:** `[["name","asc"]]`. Each sort condition must be represented with the two-elements <Array\> with the following structure:
-        -   <string\> Field name to sort by, possible fields: `"type"`, `"static"`, `"deleted"`, `"name"`, `"username"`, `"total_users"`, `"total_subscribed_users"`, `"total_unsubscribed_users"`, `"started"`, `"error"`.
-        -   <string\> Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
-    -   `offset` <integer\> Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
-    -   `limit` <integer\> Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
+    -   `where` {Object} Set of the filters by field values:
+        -   `static` {Array} Filter by the `static` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {boolean} Field value.
+        -   `deleted` {Array} Filter by the `deleted` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {boolean} Field value.
+        -   `name` {Array} Filter by the `name` field value:
+            -   {string} Filter operator, one of the: `"includes case insensitive"`.
+            -   {string} Field value.
+    -   `order_by` {Array} Array of the sort conditions. **Default:** `[["name","asc"]]`. Each sort condition must be represented with the two-elements {Array} with the following structure:
+        -   {string} Field name to sort by, possible fields: `"type"`, `"static"`, `"deleted"`, `"name"`, `"username"`, `"total_users"`, `"total_subscribed_users"`, `"total_unsubscribed_users"`, `"started"`, `"error"`.
+        -   {string} Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
+    -   `offset` {integer} Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
+    -   `limit` {integer} Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
     -   Example (this is the abstract data structure example, not related to the current method):
         ```json
         {
@@ -3042,23 +3042,23 @@ curl \
 
 <!-- tabs:end -->
 
--   `options?` <Object\>
+-   `options?` {Object}
 
-    -   `where` <Object\> Set of the filters by field values:
-        -   `static` <Array\> Filter by the `static` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <boolean\> Field value.
-        -   `deleted` <Array\> Filter by the `deleted` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <boolean\> Field value.
-        -   `name` <Array\> Filter by the `name` field value:
-            -   <string\> Filter operator, one of the: `"includes case insensitive"`.
-            -   <string\> Field value.
-    -   `order_by` <Array\> Array of the sort conditions. **Default:** `[["name","asc"]]`. Each sort condition must be represented with the two-elements <Array\> with the following structure:
-        -   <string\> Field name to sort by, possible fields: `"type"`, `"static"`, `"deleted"`, `"name"`, `"username"`, `"total_users"`, `"total_subscribed_users"`, `"total_unsubscribed_users"`, `"started"`, `"error"`.
-        -   <string\> Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
-    -   `offset` <integer\> Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
-    -   `limit` <integer\> Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
+    -   `where` {Object} Set of the filters by field values:
+        -   `static` {Array} Filter by the `static` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {boolean} Field value.
+        -   `deleted` {Array} Filter by the `deleted` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {boolean} Field value.
+        -   `name` {Array} Filter by the `name` field value:
+            -   {string} Filter operator, one of the: `"includes case insensitive"`.
+            -   {string} Field value.
+    -   `order_by` {Array} Array of the sort conditions. **Default:** `[["name","asc"]]`. Each sort condition must be represented with the two-elements {Array} with the following structure:
+        -   {string} Field name to sort by, possible fields: `"type"`, `"static"`, `"deleted"`, `"name"`, `"username"`, `"total_users"`, `"total_subscribed_users"`, `"total_unsubscribed_users"`, `"started"`, `"error"`.
+        -   {string} Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
+    -   `offset` {integer} Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
+    -   `limit` {integer} Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
     -   Example (this is the abstract data structure example, not related to the current method):
         ```json
         {
@@ -3185,7 +3185,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `telegram_bot_api_token` <string\>
+-   `telegram_bot_api_token` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -3222,7 +3222,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `telegram_bot_api_token` <string\>
+-   `telegram_bot_api_token` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -3235,7 +3235,7 @@ curl \
 
     </details>
 
--   `telegram_bot_type` <string\>
+-   `telegram_bot_type` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -3272,7 +3272,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `bot_id` <integer\>
+-   `bot_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3286,7 +3286,7 @@ curl \
 
     </details>
 
--   `started` <boolean\>
+-   `started` {boolean}
 
     <details>
         <summary>JSON schema</summary>
@@ -3323,7 +3323,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `bot_id` <integer\>
+-   `bot_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3337,7 +3337,7 @@ curl \
 
     </details>
 
--   `bot_api_token` <string\>
+-   `bot_api_token` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -3374,7 +3374,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `bot_id` <integer\>
+-   `bot_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3412,7 +3412,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `bot_id` <integer\>
+-   `bot_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3450,7 +3450,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `bot_id` <integer\>
+-   `bot_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3501,7 +3501,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `bot_id` <integer\>
+-   `bot_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3515,7 +3515,7 @@ curl \
 
     </details>
 
--   `options` <Object\>
+-   `options` {Object}
 
     <details>
         <summary>JSON schema</summary>
@@ -3574,20 +3574,20 @@ curl \
 
 <!-- tabs:end -->
 
--   `options` <Object\>
+-   `options` {Object}
 
-    -   `where` <Object\> Set of the filters by field values:
-        -   `telegram_bot_id` <Array\> **Required**. Filter by the `telegram_bot_id` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <integer\> Field value.
-        -   `name` <Array\> Filter by the `name` field value:
-            -   <string\> Filter operator, one of the: `"includes case insensitive"`.
-            -   <string\> Field value.
-    -   `order_by` <Array\> Array of the sort conditions. **Default:** `[["last_user_created","desc"]]`. Each sort condition must be represented with the two-elements <Array\> with the following structure:
-        -   <string\> Field name to sort by, possible fields: `"name"`, `"created"`, `"last_user_created"`, `"total_subscribed_users"`, `"total_unsubscribed_users"`.
-        -   <string\> Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
-    -   `offset` <integer\> Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
-    -   `limit` <integer\> Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
+    -   `where` {Object} Set of the filters by field values:
+        -   `telegram_bot_id` {Array} **Required**. Filter by the `telegram_bot_id` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {integer} Field value.
+        -   `name` {Array} Filter by the `name` field value:
+            -   {string} Filter operator, one of the: `"includes case insensitive"`.
+            -   {string} Field value.
+    -   `order_by` {Array} Array of the sort conditions. **Default:** `[["last_user_created","desc"]]`. Each sort condition must be represented with the two-elements {Array} with the following structure:
+        -   {string} Field name to sort by, possible fields: `"name"`, `"created"`, `"last_user_created"`, `"total_subscribed_users"`, `"total_unsubscribed_users"`.
+        -   {string} Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
+    -   `offset` {integer} Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
+    -   `limit` {integer} Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
     -   Example (this is the abstract data structure example, not related to the current method):
         ```json
         {
@@ -3670,7 +3670,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `telegram_bot_link_id` <integer\>
+-   `telegram_bot_link_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3708,7 +3708,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `telegram_bot_id` <integer\>
+-   `telegram_bot_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3722,7 +3722,7 @@ curl \
 
     </details>
 
--   `options` <Object\>
+-   `options` {Object}
 
     <details>
         <summary>JSON schema</summary>
@@ -3774,7 +3774,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `telegram_bot_id` <integer\>
+-   `telegram_bot_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3788,7 +3788,7 @@ curl \
 
     </details>
 
--   `telegram_bot_link_id` <integer\>
+-   `telegram_bot_link_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3838,7 +3838,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `telegram_bot_id` <integer\>
+-   `telegram_bot_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3852,7 +3852,7 @@ curl \
 
     </details>
 
--   `teleram_bot_link_id` <integer\>
+-   `teleram_bot_link_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3865,7 +3865,7 @@ curl \
 
     </details>
 
--   `options` <Object\>
+-   `options` {Object}
 
     <details>
         <summary>JSON schema</summary>
@@ -3917,7 +3917,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `telegram_bot_id` <integer\>
+-   `telegram_bot_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3931,7 +3931,7 @@ curl \
 
     </details>
 
--   `telegram_bot_link_id` <integer\>
+-   `telegram_bot_link_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -3970,41 +3970,41 @@ curl \
 
 <!-- tabs:end -->
 
--   `options` <Object\>
+-   `options` {Object}
 
-    -   `where` <Object\> Set of the filters by field values:
-        -   `telegram_bot_id` <Array\> **Required**. Filter by the `telegram_bot_id` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <integer\> Field value.
-        -   `search` <Array\> Filter by the `search` field value:
-            -   <string\> Filter operator, one of the: `"includes case insensitive"`.
-            -   <string\> Field value.
-        -   `is_bot` <Array\> Filter by the `is_bot` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <boolean\> Field value.
-        -   `username` <Array\> Filter by the `username` field value:
-            -   <string\> Filter operator, one of the: `"includes case insensitive"`.
-            -   <string\> Field value.
-        -   `first_name` <Array\> Filter by the `first_name` field value:
-            -   <string\> Filter operator, one of the: `"includes case insensitive"`.
-            -   <string\> Field value.
-        -   `last_name` <Array\> Filter by the `last_name` field value:
-            -   <string\> Filter operator, one of the: `"includes case insensitive"`.
-            -   <string\> Field value.
-        -   `phone` <Array\> Filter by the `phone` field value:
-            -   <string\> Filter operator, one of the: `"includes case insensitive"`.
-            -   <string\> Field value.
-        -   `subscribed` <Array\> Filter by the `subscribed` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <boolean\> Field value.
-        -   `enabled` <Array\> Filter by the `enabled` field value:
-            -   <string\> Filter operator, one of the: `"="`.
-            -   <boolean\> Field value.
-    -   `order_by` <Array\> Array of the sort conditions. **Default:** `[["username","asc"]]`. Each sort condition must be represented with the two-elements <Array\> with the following structure:
-        -   <string\> Field name to sort by, possible fields: `"username"`, `"first_name"`, `"last_name"`, `"phone"`, `"created"`, `"last_activity"`.
-        -   <string\> Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
-    -   `offset` <integer\> Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
-    -   `limit` <integer\> Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
+    -   `where` {Object} Set of the filters by field values:
+        -   `telegram_bot_id` {Array} **Required**. Filter by the `telegram_bot_id` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {integer} Field value.
+        -   `search` {Array} Filter by the `search` field value:
+            -   {string} Filter operator, one of the: `"includes case insensitive"`.
+            -   {string} Field value.
+        -   `is_bot` {Array} Filter by the `is_bot` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {boolean} Field value.
+        -   `username` {Array} Filter by the `username` field value:
+            -   {string} Filter operator, one of the: `"includes case insensitive"`.
+            -   {string} Field value.
+        -   `first_name` {Array} Filter by the `first_name` field value:
+            -   {string} Filter operator, one of the: `"includes case insensitive"`.
+            -   {string} Field value.
+        -   `last_name` {Array} Filter by the `last_name` field value:
+            -   {string} Filter operator, one of the: `"includes case insensitive"`.
+            -   {string} Field value.
+        -   `phone` {Array} Filter by the `phone` field value:
+            -   {string} Filter operator, one of the: `"includes case insensitive"`.
+            -   {string} Field value.
+        -   `subscribed` {Array} Filter by the `subscribed` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {boolean} Field value.
+        -   `enabled` {Array} Filter by the `enabled` field value:
+            -   {string} Filter operator, one of the: `"="`.
+            -   {boolean} Field value.
+    -   `order_by` {Array} Array of the sort conditions. **Default:** `[["username","asc"]]`. Each sort condition must be represented with the two-elements {Array} with the following structure:
+        -   {string} Field name to sort by, possible fields: `"username"`, `"first_name"`, `"last_name"`, `"phone"`, `"created"`, `"last_activity"`.
+        -   {string} Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
+    -   `offset` {integer} Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
+    -   `limit` {integer} Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
     -   Example (this is the abstract data structure example, not related to the current method):
         ```json
         {
@@ -4114,7 +4114,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `teleram_bot_id` <integer\>
+-   `teleram_bot_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -4127,7 +4127,7 @@ curl \
 
     </details>
 
--   `teleram_bot_user_id` <integer\>
+-   `teleram_bot_user_id` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -4141,7 +4141,7 @@ curl \
 
     </details>
 
--   `enabled` <boolean\>
+-   `enabled` {boolean}
 
     <details>
         <summary>JSON schema</summary>
@@ -4200,7 +4200,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `delay?` <null\> | <integer\>
+-   `delay?` {null|integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -4235,7 +4235,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `data` <Object\>
+-   `data` {Object}
 
     <details>
         <summary>JSON schema</summary>
