--- a/docs/rpc/v1.md
+++ b/docs/rpc/v1.md
@@ -51,7 +51,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `password?` <string\>
+-   `password?` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -88,7 +88,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `proxy_id` <string\>
+-   `proxy_id` {string}
 
     <details>
         <summary>JSON schema</summary>
@@ -102,7 +102,7 @@ curl \
 
     </details>
 
--   `upstream_port` <integer\>
+-   `upstream_port` {integer}
 
     <details>
         <summary>JSON schema</summary>
@@ -116,7 +116,7 @@ curl \
 
     </details>
 
--   `options` <Object\>
+-   `options` {Object}
 
     <details>
         <summary>JSON schema</summary>
@@ -236,7 +236,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `args?` <string\> Parameter description. Playwright enables fast, reliable and capable automation across all modern browsers. This guide covers those key differentiators to help you decide on the right tool for your automated tests.
+-   `args?` {string} Parameter description. Playwright enables fast, reliable and capable automation across all modern browsers. This guide covers those key differentiators to help you decide on the right tool for your automated tests.
 
     <details>
         <summary>JSON schema</summary>
@@ -249,7 +249,7 @@ curl \
 
     </details>
 
--   `test?` <Object\> Test parameter.
+-   `test?` {Object} Test parameter.
 
     <details>
         <summary>JSON schema</summary>
@@ -262,7 +262,7 @@ curl \
 
     </details>
 
-Playwright methods might throw errors if they are unable to fulfill a request. For example, page.waitForSelector(selector[, options]) might fail if the selector doesn't match any nodes during the given timeframe.
+Playwright methods might throw errors if they are unable to fulfill a request. For example, page.waitForSelector(selector\[, options]) might fail if the selector doesn't match any nodes during the given timeframe.
 
 For certain types of errors Playwright uses specific error classes. These classes are available via playwright.errors.
 
@@ -288,7 +288,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `data` <Object\>
+-   `data` {Object}
 
     <details>
         <summary>JSON schema</summary>
